unpackaged/main/default/objects/ETT_Used_Tyre_Casing_Price__mdt/ETT_Used_Tyre_Casing_Price__mdt.object-meta.xml
<CustomObject>
    <label>Used Tyre/Casing Price</label>
    <pluralLabel>Used Tyre/Casing Prices</pluralLabel>
</CustomObject>