unpackaged/main/default/objects/ETT_Used_Tyre_Casing_Price__mdt/fields/ETT_Max_Range__c.field-meta.xml
<CustomField>
    <fullName>ETT_Max_Range__c</fullName>
    <label>Max Range</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>