unpackaged/main/default/objects/ETT_Used_Tyre_Casing_Price__mdt/fields/ETT_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remarks__c</fullName>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>